dynamix/force-app/main/default/objects/Task_Target__c/Task_Target__c.object-meta.xml
<CustomObject>
    <label>Task Target</label>
    <nameField>
        <displayFormat>TT-{0000}</displayFormat>
        <label>Task Target Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>