dynamix/force-app/main/default/objects/Task_Target__c/fields/Enquiry_Created__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Created__c</fullName>
    <label>Enquiry Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>