dynamix/force-app/main/default/objects/Task_Target__c/fields/Enquiry_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Qualified__c</fullName>
    <label>Enquiry Qualified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>