dynamix/force-app/main/default/objects/Task_Target__c/fields/Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Month_Year__c</fullName>
    <formula>TEXT(Month__c)  +&apos; &apos;+  TEXT(Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month &amp; Year</label>
    <type>Text</type>
</CustomField>