dynamix/force-app/main/default/objects/Task_Target__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>Project__r.Name +&apos; &apos;+User__r.FirstName+&apos; &apos;+User__r.LastName+ &apos; &apos;+  TEXT(Type__c)  + &apos; &apos;+ TEXT(Month__c) + &apos; &apos;+  TEXT(Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>