dynamix/force-app/main/default/objects/Task_Target__c/fields/No_of_Follow_Ups__c.field-meta.xml
<CustomField>
    <fullName>No_of_Follow_Ups__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of Follow Ups</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>