dynamix/force-app/main/default/objects/Task_Target__c/fields/No_of_Walk_ins__c.field-meta.xml
<CustomField>
    <fullName>No_of_Walk_ins__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No. of Walk-ins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>