dynamix/force-app/main/default/objects/Task_Target__c/fields/Number_of_Connected_Call__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Connected_Call__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Connected Call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>