dynamix/force-app/main/default/objects/Task_Target__c/fields/Number_of_Targets__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Targets__c</fullName>
    <label>Number of Targets</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>