dynamix/force-app/main/default/objects/Task_Target__c/fields/Number_of_Targets_Achievement_Formula__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Targets_Achievement_Formula__c</fullName>
    <formula>Number_of_Targets_Achievement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Targets Achievement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>