dynamix/force-app/main/default/objects/Task_Target__c/fields/of_Target_Achievement__c.field-meta.xml
<CustomField>
    <fullName>of_Target_Achievement__c</fullName>
    <formula>(Number_of_Targets_Achievement__c / Number_of_Targets__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Target Achievement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>