dynamix/force-app/main/default/objects/Task_Target__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Task Targets</relationshipLabel>
    <relationshipName>Task_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>