dynamix/force-app/main/default/objects/Task_Target__c/fields/Target_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Start_Date__c</fullName>
    <label>Target  Date</label>
    <type>Date</type>
</CustomField>