dynamix/force-app/main/default/objects/Task_Target__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connected Call</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
            <value>
                <fullName>Unique-Revisits</fullName>
            </value>
            <value>
                <fullName>Bookings</fullName>
            </value>
            <value>
                <fullName>Unique Inbound</fullName>
            </value>
            <value>
                <fullName>Unique Outbound</fullName>
            </value>
            <value>
                <fullName>Customer Walk In(CP)</fullName>
            </value>
            <value>
                <fullName>CP Visits</fullName>
                <isActive>false</isActive>
                <label>CP Visits</label>
            </value>
            <value>
                <fullName>Event</fullName>
                <isActive>false</isActive>
                <label>Event</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>