dynamix/force-app/main/default/objects/Task_Target__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enquiry_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>