dynamix/force-app/main/default/objects/Task_Target__c/fields/X1st_Week__c.field-meta.xml
<CustomField>
    <fullName>X1st_Week__c</fullName>
    <defaultValue>0</defaultValue>
    <label>1st Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>