dynamix/force-app/main/default/objects/Task_Target__c/fields/X2nd_Week__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Week__c</fullName>
    <label>2nd Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>