dynamix/force-app/main/default/objects/Task_Target__c/fields/X5th_Week__c.field-meta.xml
<CustomField>
    <fullName>X5th_Week__c</fullName>
    <label>5th Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>