dynamix/force-app/main/default/objects/Task_Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Type__c</columns>
    <columns>Project__c</columns>
    <columns>Number_of_Targets__c</columns>
    <columns>Number_of_Targets_Achievement__c</columns>
    <columns>of_Target_Achievement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>